microserv-scooter/src/main/java/org/example/microservscooter/error/exception/NotExistsException.java
package org.example.microservscooter.error.exception;

public class NotExistsException extends RuntimeException{

    public NotExistsException(String message) {
        super(message);
    }
}
